semcore/input-tags/src/style/input-tag.shadow.css
SInputTags {
  box-sizing: border-box;
  cursor: text;
  /* reset for ScrollArea because cut box-shadow */
  overflow: initial;
}

SInputTags > div > div {
  display: flex;
  align-items: center;
  flex-flow: row wrap;
}

SInputTags > div[data-ui-name='ScrollArea.Bar'][orientation='vertical'] {
  right: 1px !important;
}

SInputTags[size='m'] {
  min-height: 28px;
  height: auto;
  padding: var(--intergalactic-spacing-05x, 2px)
    calc(var(--intergalactic-spacing-1x, 4px) + var(--intergalactic-spacing-05x, 2px));
}

SInputTags[size='l'] {
  min-height: 40px;
  height: auto;
  padding: var(--intergalactic-spacing-05x, 2px)
    calc(var(--intergalactic-spacing-2x, 8px) + var(--intergalactic-spacing-05x, 2px));
}

STag[size='m'] {
  margin: var(--intergalactic-spacing-05x, 2px);
}

STag[size='l'] {
  margin: var(--intergalactic-spacing-1x, 4px) var(--intergalactic-spacing-05x, 2px);
}

STag[editable] {
  cursor: pointer;
}

SValue {
  padding: 0 !important;
  margin: var(--intergalactic-spacing-05x, 2px);
}

SSpacer {
  position: absolute;
  top: 0;
  left: 0;
  visibility: hidden;
  height: 0;
  overflow: scroll;
  white-space: pre;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  font-style: inherit;
  letter-spacing: inherit;
  text-transform: inherit;
}

